crates/solverforge-macros/tests/ui/fail/planning_list_variable_unknown_argument.stderr
error: unsupported planning_list_variable argument `unexpected`; supported arguments are element_collection, distance_meter, intra_distance_meter, route_hooks, savings_hooks, savings_metric_class_fn, element_owner_fn, construction_element_order_key, precedence_duration_fn, precedence_successors_fn, solution_trait
 --> tests/ui/fail/planning_list_variable_unknown_argument.rs:8:61
  |
8 |     #[planning_list_variable(element_collection = "visits", unexpected = "value")]
  |                                                             ^^^^^^^^^^^^^^^^^^^^
